Ajout des éléments du formulaire
Ajout des inputs concernant la civilité, les coordonnées, le poste souhaité, les diplomes, le dernier poste et le téléchargement du cv complet.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,53 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Dossier de recrutement</h1>
+        <p>Merci de bien vouloir remplir l'intégralité du formulaire ci-dessous et d'y joindre votre CV.</p>
+    </header>
+    <main>
+        <form action="#" method="post">
+            <div class="civilite">
+                <h2>Civilité</h2>
+                <input type="radio" name="madame" id="madame"><label for="madame">Madame</label>
+                <input type="radio" name="monsieur" id="monsieur"><label for="monsieur">Monsieur</label>
+                <input type="text" name="nomInput" id="nomInput" placeholder="Nom" required>
+                <input type="text" name="prenomInput" id="prenomInput" placeholder="Prénom" required>
+            </div>
+
+            <div class="coordonnees">
+                <h2>Coordonnées</h2>
+                <input type="tel" name="telInput" id="telInput" placeholder="N° de téléphone" required>
+                <input type="email" name="emailInput" id="emailInput" placeholder="Adresse mail" required>
+            </div>
+            
+            <div class="poste">
+                <h2>Poste souhaité</h2>
+                <select name="poste" id="poste">
+                    <option value="ads">Agent De Sécurité</option>
+                    <option value="ssiap1">Agent des Services de Sécurité Incendie</option>
+                    <option value="ssiap2">Responsable des Services de Sécurité Incendie</option>
+                </select>
+            </div>
+
+            <div class="diplomes">
+            <h2>Diplomes</h2>
+                <input type="checkbox" name="cqp" id="cqp"><label for="cqp">CQP APS</label>
+                <input type="checkbox" name="sst" id="sst"><label for="sst">SST</label>
+                <input type="checkbox" name="ssiap1" id="ssiap1"><label for="ssiap1">SSIAP1</label>
+                <input type="checkbox" name="ssiap2" id="ssiap2"><label for="ssiap2">SSIAP2</label>
+            </div>
+
+            <div class="dernierPoste">
+                <label for="dernierPoste">Veuillez détaillez ci-dessous votre dernier poste</label>
+                <textarea id="dernierPoste" name="dernierPoste" placeholder="Employeur, type de poste, horaires, missions, type de contrat..."></textarea>
+            </div>
+
+            <div class="cv">
+                <label for="cv">Téléchargez votre CV</label>
+                <input type="file" name="cv" id="cv">
+            </div>
+        </form>
+    </main>
 </body>
 </html>
