--- a/index.html
+++ b/index.html
@@ -12,42 +12,49 @@
         <h1>Dossier de recrutement</h1>
         <p>Merci de bien vouloir remplir l'intégralité du formulaire ci-dessous et d'y joindre votre CV.</p>
     </header>
+
     <main>
         <form action="#" method="post">
+            <h2>Civilité</h2>
             <div class="civilite">
-                <h2>Civilité</h2>
-                <input type="radio" name="madame" id="madame"><label for="madame">Madame</label>
-                <input type="radio" name="monsieur" id="monsieur"><label for="monsieur">Monsieur</label>
+                <span>
+                    <input type="radio" name="civilite" id="madame"><label for="madame">Madame</label>
+                </span>
+                <span>
+                    <input type="radio" name="civilite" id="monsieur"><label for="monsieur">Monsieur</label>
+                </span>
                 <input type="text" name="nomInput" id="nomInput" placeholder="Nom" required>
                 <input type="text" name="prenomInput" id="prenomInput" placeholder="Prénom" required>
             </div>
 
+            <h2>Coordonnées</h2>
             <div class="coordonnees">
-                <h2>Coordonnées</h2>
                 <input type="tel" name="telInput" id="telInput" placeholder="N° de téléphone" required>
                 <input type="email" name="emailInput" id="emailInput" placeholder="Adresse mail" required>
             </div>
             
             <div class="poste">
                 <h2>Poste souhaité</h2>
-                <select name="poste" id="poste">
-                    <option value="ads">Agent De Sécurité</option>
-                    <option value="ssiap1">Agent des Services de Sécurité Incendie</option>
-                    <option value="ssiap2">Responsable des Services de Sécurité Incendie</option>
-                </select>
+                <div>
+                    <select name="poste" id="poste">
+                        <option value="ads">Agent De Sécurité</option>
+                        <option value="ssiap1">Agent des Services de Sécurité Incendie</option>
+                        <option value="ssiap2">Responsable des Services de Sécurité Incendie</option>
+                    </select>
+                </div>
             </div>
 
             <div class="diplomes">
-            <h2>Diplomes</h2>
-                <input type="checkbox" name="cqp" id="cqp"><label for="cqp">CQP APS</label>
-                <input type="checkbox" name="sst" id="sst"><label for="sst">SST</label>
-                <input type="checkbox" name="ssiap1" id="ssiap1"><label for="ssiap1">SSIAP1</label>
-                <input type="checkbox" name="ssiap2" id="ssiap2"><label for="ssiap2">SSIAP2</label>
+                <h2>Diplomes</h2>
+                    <span><input type="checkbox" name="cqp" id="cqp"><label for="cqp">CQP APS</label></span>
+                    <span><input type="checkbox" name="sst" id="sst"><label for="sst">SST</label></span>
+                    <span><input type="checkbox" name="ssiap1" id="ssiap1"><label for="ssiap1">SSIAP1</label></span>
+                    <span><input type="checkbox" name="ssiap2" id="ssiap2"><label for="ssiap2">SSIAP2</label></span>
             </div>
 
             <div class="dernierPoste">
-                <label for="dernierPoste">Veuillez détaillez ci-dessous votre dernier poste</label>
-                <textarea id="dernierPoste" name="dernierPoste" placeholder="Employeur, type de poste, horaires, missions, type de contrat..."></textarea>
+                <label for="dernierPoste">Veuillez détaillez ci-dessous votre dernier poste :</label>
+                <textarea id="dernierPoste" name="dernierPoste" placeholder="Employeur, type de poste, horaires, missions, type de contrat..." rows="15" cols="80"></textarea>
             </div>
 
             <div class="cv">
@@ -55,6 +62,7 @@
                 <input type="file" name="cv" id="cv">
             </div>
         </form>
+        <button>Valider</button>
     </main>
 </body>
 </html>
